2006-07-17  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* scm/paper.scm (internal-set-paper-size): define landscape to #f
	if unset.

	* scm/framework-ps.scm (convert-to-pdf): swap h and w in case of landscape. 

	* stepmake/stepmake/texinfo-rules.make: strip DVI support.

	* scm/framework-eps.scm (dump-stencils-as-EPSes): generate
	systems.pdftex too.o 

	* scm/backend-library.scm (postscript->pdf): use -dEPSCrop for PDF.

	* make/lilypond-vars.make (TEXINPUTS): add pdf output format.

	* Documentation/topdocs/NEWS.tely (Top): add pdftex note.

	* scm/output-ps.scm (resetrotation): use gsave/grestore for rotation.

	* lily/main.cc (parse_argv): don't overwrite previous --formats string.

	* scm/backend-library.scm (postscript->pdf): strip .eps too. 

2006-07-14  Nicolas Sceaux  <nicolas.sceaux@free.fr>

	* scm/layout-page-layout.scm: Define module, tidy code, use more
	functions iso. a single big one.

	* scm/layout-page-dump.scm: move page dump functions used in two
	pass spacing to this file. Define module.

	* scm/lily.scm (ly:load): don't load layout-page-layout.scm
	 (separate module)

	* ly/paper-defaults.ly: use module layout-page-layout.

2006-07-14  Erik Sandberg  <mandolaerik@gmail.com>

	* lily/music.cc: Revised MusicEvent event class. It now contains
	event data directly instead of encapsulating it in music. The
	previously used class is renamed to OldMusicEvent.

	* lily/stream-event.cc: Stream events are now probs.
	
	* lily/translator-group.cc, lily/translator.cc: Translators can
	now listen directly to stream events, by using macros
	[DECLARE,IMPLEMENT]_TRANSLATOR_LISTENER.

	* lily/arpeggio-engraver.cc: Converted to use new event system

	* THANKS: Corrected spelling mistake.

2006-07-12  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/SConscript, make/lilypond-vars.make,
	input/GNUmakefile: doc build looks in input/manual instead
	of input/test/

	* input/manual/ GNUmakefile, SConscript: build files for
	input/manual/
