@@ -2,15 +2,14 @@ depth=../..
 
 LATEX_FILES =$(call src-wildcard,*.latex)
 
-# todo: add latex.
-DVI_FILES = $(TELY_FILES:%.tely=$(outdir)/%.dvi)
 
 EXTRA_DIST_FILES= $(LATEX_FILES) $(IMAGES) README.txt $(EPS_ILLUSTRATIONS)
 
 IMAGES=$(call src-wildcard,*.png)
 EPS_ILLUSTRATIONS=context-example.eps
+PDF_ILLUSTRATIONS=context-example.pdf
 
-OUT_EPS_IMAGES=$(IMAGES:%.png=$(outdir)/%.eps) $(addprefix $(outdir)/,$(EPS_ILLUSTRATIONS))
+OUT_PDF_IMAGES=$(IMAGES:%.png=$(outdir)/%.pdf) $(addprefix $(outdir)/,$(PDF_ILLUSTRATIONS))
 OUT_PNG_IMAGES=$(OUT_EPS_IMAGES:%.eps=%.png)
 
 OUT_TEXI_FILES=$(ITEXI_FILES:%.itexi=$(outdir)/%.texi)\
@@ -18,10 +17,8 @@ OUT_TEXI_FILES=$(ITEXI_FILES:%.itexi=$(outdir)/%.texi)\
 HTML_FILES = $(TELY_FILES:%.tely=$(outdir)/%.html)\
  $(outdir)/lilypond-internals.html
 
-PS_FILES = $(DVI_FILES:.dvi=.ps)
-PDF_FILES = $(DVI_FILES:.dvi=.pdf)
-
-PS_GZ_FILES= $(addsuffix .gz, $(PS_FILES))
+# todo: add latex.
+PDF_FILES = $(TELY_FILES:%.tely=$(outdir)/%.pdf)
 
 INFO_DOCS = lilypond lilypond-internals music-glossary
 INFO_FILES = $(INFO_DOCS:%=$(outdir)/%.info)
@@ -37,10 +34,6 @@ TEXINPUTS=$(top-src-dir)/tex::
 export TEXINPUTS
 
 include $(depth)/make/stepmake.make
-
-dvi: $(DVI_FILES)
-
-ps: $(PS_FILES)
 
 info: $(INFO_FILES)
 
@@ -195,7 +188,7 @@ $(outdir)/lilypond-internals/lilypond-internals.xml: $(outdir)/lilypond-internal
 	mkdir -p $(dir $@)
 	$(MAKEINFO) --output=$(outdir)/lilypond-internals --docbook $<
 
-$(outdir)/lilypond.dvi: $(OUT_EPS_IMAGES) $(OUT_PNG_IMAGES)
+$(outdir)/lilypond.pdf: $(OUT_PDF_IMAGES) $(OUT_PNG_IMAGES)
 
 $(outdir)/%.png: %.png
 	convert -geometry 50x50% $< $@
@@ -208,6 +201,13 @@ $(outdir)/%.eps: %.png
 
 $(outdir)/%.eps: %.eps
 	cp $< $@
+
+$(outdir)/%.pdf: %.png
+	convert $< $@
+
+$(outdir)/%.pdf: %.eps
+	convert $< $@
+
 
 DEEP_HTML_FILES =\
  $(outdir)/lilypond/index.html\
